--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -71,6 +71,8 @@
   --z-index--1: -1;
 }
 
+
+
 html {
   scroll-behavior: smooth;
 }
@@ -168,6 +170,8 @@ a {
 .none {
   display: none !important;
 }
+
+/*HELP I'M LOOSING IT*/
 
 .color-background {
   position: relative;
