--- a/src/pages/faellesskaber.astro
+++ b/src/pages/faellesskaber.astro
@@ -32,7 +32,7 @@ import UnderlinedHeader from "../components/ui/UnderlinedHeader.astro";
       </div>
     </div>
     <div class="color-section-components-container">
-      <ColorSection extraInfo="13-16_år" color="green" title="EmpowR" hex="#d1ff99" text="Timeld EmpowR" link="/">
+      <ColorSection extraInfo="13-16_år" color="green" title="EmpowR" hex="#d1ff99" text="Timeld EmpowR" size="m-extra-small-d-medium" link="/">
         <p slot="subheader" class="themeheader age-desc">For dig mellem 13-16 år</p>
         <p slot="description">
           I EmpowR mødes du med en lille gruppe piger mellem 13 og 16 år én gang om ugen i 10 uger tæt på, hvor du bor. I taler om alt det, der fylder. Det kan være venskaber, ensomhed, kærlighed og andre emner. Her vil du opdage, at der er så meget,
@@ -40,7 +40,7 @@ import UnderlinedHeader from "../components/ui/UnderlinedHeader.astro";
         </p>
         <p>To frivillige unge kvinder leder EmpowR og sørger for at det er trygt og rart at være med.</p>
       </ColorSection>
-      <ColorSection extraInfo="16-24_år" color="pink" title="Sisterhood" hex="#ffe4ee" text="Timeld Sisterhood" link="/">
+      <ColorSection extraInfo="16-24_år" color="pink" title="Sisterhood" hex="#ffe4ee" text="Timeld Sisterhood" size="m-extra-small-d-medium" link="/">
         <p slot="subheader" class="themeheader age-desc">For dig mellem 18-24, som er indskrevet på en uddannelse</p>
         <p slot="description">
           I EmpowR mødes du med en lille gruppe piger mellem 13 og 16 år én gang om ugen i 10 uger tæt på, hvor du bor. I taler om alt det, der fylder. Det kan være venskaber, ensomhed, kærlighed og andre emner. Her vil du opdage, at der er så meget,
@@ -48,7 +48,7 @@ import UnderlinedHeader from "../components/ui/UnderlinedHeader.astro";
         </p>
         <p slot="description">To frivillige unge kvinder leder EmpowR og sørger for at det er trygt og rart at være med.</p>
       </ColorSection>
-      <ColorSection extraInfo="16-24_år" color="purple" title="Velux" hex="#edcff8" text="Timeld Velux" link="/">
+      <ColorSection extraInfo="16-24_år" color="purple" title="Velux" hex="#edcff8" text="Timeld Velux" size="m-extra-small-d-medium" link="/">
         <p slot="subheader" class="themeheader age-desc">For dig mellem 18-24, som ikke er indskrevet på en uddannelse</p>
         <p slot="description">
           I EmpowR mødes du med en lille gruppe piger mellem 13 og 16 år én gang om ugen i 10 uger tæt på, hvor du bor. I taler om alt det, der fylder. Det kan være venskaber, ensomhed, kærlighed og andre emner. Her vil du opdage, at der er så meget,
