--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -177,7 +177,13 @@ a {
   border-radius: 8px 8px 0 0;
 }
 
-/* IMAGES */
+/* NEWSLETTER BUTTON */
+
+.disabled-button:hover {
+  background-color: var(--color-black-ish);
+  color: var(--color-off-white);
+  box-shadow: none;
+}
 
 
 @media only screen and (min-width: 600px) {
