--- a/src/pages/main.astro
+++ b/src/pages/main.astro
@@ -16,11 +16,11 @@ import Button from "../components/ui/Button.astro";
       <h2 class="sub-header-underlined">Tema: Venskaber og Familie</h2>
       <div class="medier-second-grid">
         <section class="mediumarticlecard">
-          <a href="#"><img src="/images/articleimages/bananaarticle.webp" alt="Artikel hvordan onanerer man?" /></a>
+          <a href="/specificarticlepage.html"><img src="/images/articleimages/bananaarticle.webp" alt="Artikel hvordan onanerer man?" /></a>
         </section>
         <section class="double-articlecard-second">
-          <a href="#"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="/images/articleimages/redbluegirlarticle.webp" /></a>
-          <a href="#"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="/images/articleimages/banana.webp" /></a>
+          <a href="/specificarticlepage.html"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="/images/articleimages/redbluegirlarticle.webp" /></a>
+          <a href="/specificarticlepage.html"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="/images/articleimages/banana.webp" /></a>
         </section>
       </div>
     </div>
@@ -104,6 +104,7 @@ import Button from "../components/ui/Button.astro";
 
   .BoxColorButtonCenter {
     align-self: center;
+    display: flex;
   }
 
   @media only screen and (min-width: 712px) {
