typeforms added to fællesskaber

--- a/src/pages/faellesskaber.astro
+++ b/src/pages/faellesskaber.astro
@@ -32,7 +32,7 @@ import UnderlinedHeader from "../components/ui/UnderlinedHeader.astro";
       </div>
     </div>
     <div class="color-section-components-container">
-      <ColorSection extraInfo="13-16_år" color="green" title="EmpowR" hex="#d1ff99" text="Timeld EmpowR" size="m-extra-small-d-medium" link="/">
+      <ColorSection extraInfo="13-16_år" color="green" title="EmpowR" hex="#d1ff99" text="Timeld EmpowR" size="m-extra-small-d-medium" link="https://jpmpz0xim6i.typeform.com/to/OTN7R0xT">
         <p slot="subheader" class="themeheader age-desc">For dig mellem 13-16 år</p>
         <p slot="description">
           I EmpowR mødes du med en lille gruppe piger mellem 13 og 16 år én gang om ugen i 10 uger tæt på, hvor du bor.
@@ -44,7 +44,7 @@ import UnderlinedHeader from "../components/ui/UnderlinedHeader.astro";
           Der er plads til alle, uanset om du taler meget eller mindre. Du kan deltage på den måde, du har lyst til.
           Se her, hvordan tidligere deltagere har tegnet deres oplevelser.</p>
       </ColorSection>
-      <ColorSection extraInfo="16-24_år" color="pink" title="Sisterhood" hex="#ffe4ee" text="Timeld Sisterhood" size="m-extra-small-d-medium" link="/">
+      <ColorSection extraInfo="16-24_år" color="pink" title="Sisterhood" hex="#ffe4ee" text="Timeld Sisterhood" size="m-extra-small-d-medium" link="https://jpmpz0xim6i.typeform.com/to/v77irLJr">
         <p slot="subheader" class="themeheader age-desc">For dig mellem 18-24, som er indskrevet på en uddannelse</p>
         <p slot="description">
           I Sisterhood er vi sammen om noget kreativt, mens vi taler om det, der fylder.
@@ -63,7 +63,7 @@ import UnderlinedHeader from "../components/ui/UnderlinedHeader.astro";
           </ul>
           <p slot="description"> Der starter hold op i efteråret 2022, og du kan stadig nå at tilmelde dig.</p>
       </ColorSection>
-      <ColorSection extraInfo="16-24_år" color="purple" title="Velux" hex="#edcff8" text="Timeld Velux" size="m-extra-small-d-medium" link="/">
+      <ColorSection extraInfo="16-24_år" color="purple" title="Velux" hex="#edcff8" text="Timeld Velux" size="m-extra-small-d-medium" link="https://jpmpz0xim6i.typeform.com/to/v77irLJr">
         <p slot="subheader" class="themeheader age-desc">For dig mellem 18-24, som ikke er indskrevet på en uddannelse</p>
         <p slot="description">
           Sisterhood er et gratis tilbud til dig, som er mellem 16 og 24 år, og som søger et trygt frirum i et fællesskab med andre unge kvinder, hvor vi styrker hinanden gennem samtale, kreativitet og aktivitet.
