--- a/src/pages/brevkasse.astro
+++ b/src/pages/brevkasse.astro
@@ -41,7 +41,7 @@ const res = await fetch(supabaseUrl, {
     <p class="indicator">{data.length} af {data.length}</p>
     <div class="lettercontainer">
 {data.map((letter) => 
-<BrevkasseCard category={letter.category} filter={letter.category.toLowerCase().replace(/\s/g, "_")} header={letter.title} />)}
+<BrevkasseCard category={letter.category} filter={letter.category.toLowerCase().replace(/\s/g, "_")} header={letter.title} href="/specificletter" />)}
     </div>
     <div class="margintop"><Button text="Læs flere"></Button></div>
   </div>
