--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,10 @@ import BoxColorButton from "../components/ui/BoxColorButton.astro";
     <section class="indexherosection">
       <img src="/images/heroimages/fpimg.webp" alt="Image with text." />
     </section>
+    <section class="indexherosectionmobile">
+      <h1 class="primary-header">Du er altid god nok</h1>
+      <img src="/images/heroimages/girls-on-stairs-1.webp" alt="Image with text." />
+    </section>
     <div class="BoxColorButtonCenter">
       <BoxColorButton size="m-extra-small-d-medium" title="Har du tanker, der fylder?" color="purple" text="Start anonym chat">
         <p slot="description">Vi sidder klar til at hjælpe dig</p>
@@ -62,6 +66,20 @@ import BoxColorButton from "../components/ui/BoxColorButton.astro";
   .indexherosection {
     padding-bottom: 40px;
     text-align: center;
+    display: none;
+  }
+
+  .indexherosectionmobile {
+    padding-bottom: 40px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .indexherosectionmobile img{
+    border-radius: 8px;
+    width: 100%;
   }
 
   .indexherosection img {
@@ -137,6 +155,13 @@ max-width: 450px;
   }
 
   @media only screen and (min-width: 712px) {
+    .indexherosection{
+      display: block;
+    }
+
+    .indexherosectionmobile{
+      display: none;
+    }
     .medier-second-grid {
       display: grid;
       grid-template-columns: 1fr 1fr;
@@ -156,6 +181,8 @@ max-width: 450px;
     .indexlayout {
       padding: 30px 70px;
     }
+
+    
   }
 
   @media only screen and (min-width: 900px) {
