added alt-text to the navigation

--- a/src/components/ui/NavSecondary.astro
+++ b/src/components/ui/NavSecondary.astro
@@ -24,7 +24,7 @@ const navLinks = [{
 <nav class="NavPrimary"> 
 
 <div class="nav-primary-logo">
-    <div class="logo"><a href="index.html"><img class="pigelogo" src="images/Pigeunivers_logo.png" alt=""></a></div>
+    <div class="logo"><a href="index.html"><img class="pigelogo" src="images/Pigeunivers_logo.png" alt="Pigeunivers by GirlTalk"></a></div>
     <div class="search-container">
         <form action="/search" method="get">
           <input class="search expandright" id="searchright" type="search" name="q" placeholder="Search">
