--- a/src/components/ui/NavPrimary.astro
+++ b/src/components/ui/NavPrimary.astro
@@ -25,7 +25,7 @@ const navLinks = [{
 <nav class="NavPrimary"> 
 
 <div class="nav-primary-logo">
-    <div class="logo"><a href="index.html"><img src="images/logo.png" alt=""></a></div>
+    <div class="logo"><a href="index.html"><img src="images/logo.png" alt="GirlTalk Logo"></a></div>
 <div class="search-flex">
     <div class="search-container">
         <form action="/search" method="get">
