added media hover to front pages

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -113,6 +113,21 @@ import BoxColorButton from "../components/ui/BoxColorButton.astro";
     gap: 20px;
   }
 
+  .medier-second-grid a{
+    transition: 0.1s ease-in;
+  }
+  .medier-second-grid a:hover{
+    transform: scale(1.04);
+  }
+
+  .medier-second-grid img{
+    transition: 0.1s ease-in;
+  }
+
+  .medier-second-grid img:hover{
+    transform: scale(1.04);
+  }
+
   .double-articlecard-second {
     display: flex;
     flex-direction: row;
