--- a/src/pages/main.astro
+++ b/src/pages/main.astro
@@ -88,6 +88,21 @@ import Button from "../components/ui/Button.astro";
     width: 100%;
   }
 
+  .medier-second-grid a{
+    transition: 0.1s ease-in;
+  }
+  .medier-second-grid a:hover{
+    transform: scale(1.04);
+  }
+
+  .medier-second-grid img{
+    transition: 0.1s ease-in;
+  }
+
+  .medier-second-grid img:hover{
+    transform: scale(1.04);
+  }
+
   /*QUOTESECTION*/
   .fp-quote-section {
     display: flex;
