added links back 'specific'-pages

--- a/src/pages/specificarticlepage.astro
+++ b/src/pages/specificarticlepage.astro
@@ -13,7 +13,7 @@ import Button from "../components/ui/Button.astro";
         <ul class="breadcrumblinks"> 
             <li><a href="main.html">Pigeunivers</a></li>
             <span>/</span>
-           <li> <a href="">Medier </a></li>
+           <li> <a href="medier.html">Medier </a></li>
            <span>/</span>
           <li>  <a href="">Hvordan vander vi venskabets blomst?</a></li>
         </ul>
