--- a/src/pages/specificletter.astro
+++ b/src/pages/specificletter.astro
@@ -13,7 +13,7 @@ import Button from "../components/ui/Button.astro";
         <ul class="breadcrumblinks"> 
             <li><a href="main.html">Pigeunivers</a></li>
             <span>/</span>
-           <li> <a href="">Brevkassen </a></li>
+           <li> <a href="brevkasse.html">Brevkassen </a></li>
            <span>/</span>
           <li>  <a href="">Brev</a></li>
         </ul>
