--- a/src/layouts/GirlsUniLayout.astro
+++ b/src/layouts/GirlsUniLayout.astro
@@ -6,7 +6,7 @@ const { title = "GirlTalk" } = Astro.props;
 
 ---
 
-<html lang="en">
+<html lang="da">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
