fixed all pages with color-section

--- a/src/pages/chat.astro
+++ b/src/pages/chat.astro
@@ -9,7 +9,8 @@ import ColorSection from "../components/ui/ColorSection.astro"
 <!-- <div class="popup">
 	<span class="popuptext" id="myPopup">A Simple Popup!</span></div>	 -->
 <ColorSection color="pink" title="GirlTalks Chat" hex="#ffe4ee" text="Start anonym chat">
-	<div slot="circle">
+	<h1 class="primary-header" slot="title">Foredragsholder</h1>
+  <div slot="circle">
 		<span class="dot"></span>
 	</div>
 	<p slot="description">
