--- a/src/pages/brevkasse.astro
+++ b/src/pages/brevkasse.astro
@@ -11,6 +11,7 @@ import UnderlinedHeader from "../components/ui/UnderlinedHeader.astro";
 <GirlsUniLayout title="Brevkasse">
   <div class="brevkasselayout">
     <ColorSection color="pink" hex="#ffe4ee" title="GirlTalk's brevkasse" text="Skriv et brev" link="https://jpmpz0xim6i.typeform.com/to/pFHo1ZT6" size="m-extra-small-d-medium">
+      <h1 class="primary-header pr-10" slot="title">GirlTalk's brevkasse</h1>
       <div slot="description" class="text-in-component">
         <p slot="description" class="themeheader">Har du nogle tanker, du har brug for at få ud af hovedet, så de fylder mindre?</p>
         <p slot="description">Del dem med os her eller læs andre pigers spørgsmål, følelser og oplevelser.</p>
@@ -125,7 +126,9 @@ import UnderlinedHeader from "../components/ui/UnderlinedHeader.astro";
 </script>
 
 <style>
-
+.pr-10{
+  padding-right:10px;
+}
   .none {
     display: none;
   }
