touchups to colorsection

--- a/src/components/ui/ColorSection.astro
+++ b/src/components/ui/ColorSection.astro
@@ -85,6 +85,12 @@ const { extraInfo, link, text, size = "m-small-d-large" } = Astro.props;
     border-radius: 0 0 8px 8px;
   }
 
+  .titleclass{
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+  }
+
 
 
 
@@ -109,10 +115,6 @@ const { extraInfo, link, text, size = "m-small-d-large" } = Astro.props;
 
 
 
-  .titleclass{
-    display: flex;
-    align-items: center;
-  }
 
 }
 
