--- a/src/components/ui/BoxColorButton.astro
+++ b/src/components/ui/BoxColorButton.astro
@@ -5,7 +5,7 @@ const { color, subheader, text, title, link, size, } = Astro.props;
 
 <section class:list={["BoxColor", color]}>
     <div class="text-container">
-  <h2 class="title secondary-header">{title}</h2>
+  <slot name="title"></slot>
   <slot name="description"></slot>
 
 
